getTuplesFromIndexSearch